# invoice_ocr

./: .gitignore  InvoiceOCR.spec  PROJECT_SPEC.md  README.md  batch_processor.py  config.py  excel_writer.py  gui.py  main.py  ocr_engine.py  parser.py  pyproject.toml  utils.py
