[project]
name = "invoice-tool"
version = "0.1.0"
description = "Local batch OCR tool for Chinese invoice PDFs"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
    "pypdfium2>=5.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyside6>=6.6.0",
    "pyinstaller>=6.0.0",
]

[tool.uv]
package = false
